--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -13,6 +13,7 @@
   <h2 class="card-title" style="font-size: 50px;margin: 40px 0;">{{this.name}}</h2>
 </div>
 
+{{!-- begin timer card --}}
 <div class="flex flex-row w-full lg:flex-row">
   
   <div class="grid flex-grow card bg-base-300 rounded-box place-items-center" style="padding: 40px;">
@@ -65,7 +66,7 @@
           </div>
         </div>
       </div>
-    {{!-- end card --}}
+    {{!-- end timer card --}}
     </div>
 
   </div>
