--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,8 +139,34 @@
 }
 
 
-
-
+/* -- */
+/* -- */
+/* Login */
+/* -- */
+/* -- */
+.login-container {
+    margin: 140px 0 0 0;
+}
+.login-card {
+    margin: 0 auto 30px auto;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 450px;
+}
+.login-header {
+    font-size: 24px;
+    font-weight: bold;
+}
+.login-subheader {
+    font-size: 15px;
+    margin: 0 0 20px 0;
+}
+.signin-button {
+    margin: 0 0 15px 0;
+}
 
 
 
