format media queries for signup page and introduce instructions

--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -251,6 +251,12 @@
     #password-login {
         width: 100%;
     }
+    #username-signup {
+        width: 100%;
+    }
+    #password-signup {
+        width: 100%;
+    }
     .signin-button {
         width: 100%;
     }
