--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,9 +177,26 @@
 /* -- */
 /* -- */
 .profile-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 120px;
+}
+.instructions-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    max-width: 800px;
+}
+.instructions-header {
+    font-size: 30px;
+}
+.profile-cards-wrap {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 .card-container {
     width: 40%;
@@ -187,13 +204,18 @@
     justify-content: center;
     border-radius: 30px;
     margin: 0 20px;
-    min-width: 325px;
+    min-width: 425px;
+    max-width: 430px;
 }
 .card-body {
     width: 80%;
     margin: 20px 30px;
     border-radius: 30px;
     padding: 0;
+}
+.project-name {
+    max-width: 210px;
+    overflow: scroll;
 }
 .chart {
     margin-bottom: 20px;
