--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,63 +1,83 @@
-
 <div class="profile-wrap">
-    
-  <div class="bg-base-300 card-container">
-    <div class="bg-base-100 shadow-xl card-body">
-      <div class="card-body">
-        <div>
-          <h3 class="card-title mb-8" style="font-size:28px">Current Projects</h3>
-          {{#if projects.length}}
-          <div class="overflow-x-auto">
-            <table class="table w-full">
-              <!-- head -->
-              <thead>
-                <tr>
-                  <th>Name</th>
-                  <th>Delete</th>
-                </tr>
-              </thead>
-              {{#each projects as |project|}}
-              <tbody>
-                <tr class="hover">
-                  <th><a href="/project/{{project.id}}" class="basis-3/4">{{project.name}}</a></th>
-                  <td><button data-id="{{project.id}}" class="basis-1/4 project-list">Delete</button></td>
-                </tr>
-              </tbody>
-              {{/each}}
-            </table>
+
+  <div class="instructions-container">
+    <h2 class="instructions-header">
+      Welcome to your profile page!
+    </h2>
+    <p class="instructions-paragraph">
+      Here is where you can register a new project you are working on by entering the name and a short description in the form below. All your projects are stored in the "Current Projects" list. Clicking on a project in this list will take you to the timer widget where you can log the hours you spend working, automatically calculate the rate you earned, and even set intervals to be prompted with exercise suggestions periodically throughout your day.(Also, a chart.js cart is included below, but does not represent data you have stored in the database. It is currently hard-coded and will be included in a future update)
+    </p>
+  </div>
+
+  <div class="profile-cards-wrap">
+      
+    <div class="bg-base-300 card-container">
+      <div class="bg-base-100 shadow-xl card-body">
+        <div class="card-body">
+          <div>
+            <h3 class="card-title mb-8" style="font-size:28px">Current Projects</h3>
+            {{#if projects.length}}
+            <div class="overflow-x-auto">
+              <table class="table w-full">
+                <!-- head -->
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Delete</th>
+                  </tr>
+                </thead>
+                {{#each projects as |project|}}
+                <tbody>
+                  <tr class="hover">
+                    <th class="project-name">
+                      <a href="/project/{{project.id}}" class="basis-3/4">
+                        {{project.name}}
+                      </a>
+                    </th>
+                    <td>
+                      <button data-id="{{project.id}}" class="basis-1/4 project-list">
+                        Delete
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+                {{/each}}
+              </table>
+            </div>
+            {{/if}}
           </div>
-          {{/if}}
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="bg-base-300 card-container">
-    <div class="bg-base-100 shadow-xl card-body">
-      <div class="card-body">
-        <h2 class="card-title" style="font-size:28px">
-          Create a new Project
-        </h2>
-        <form class="form-control w-full max-w-xs new-project-form">
-          <label class="label" for="new-project-name">
-            <span class="label-text">
-              Project Name
-            </span>
-          </label>
-          <input  id="new-project-name" type="text" placeholder="Name of your project" class="input input-bordered text-primary-content input-primary w-full max-w-xs" />
-          <label class="label" for="new-project-description">
-            <span class="label-text">
-              Description
-            </span>
-          </label>
-          <textarea id="new-project-description" height="50px" class="textarea text-primary-content textarea-primary" placeholder="Short description of your project"></textarea>
-    
-          <div class="card-actions justify-center">
-            <button class="btn btn-primary btn-active hover:bg-primary mt-4" type="submit">Create Project</button><br>
-          </div>
-        </form>  
+    <div class="bg-base-300 card-container">
+      <div class="bg-base-100 shadow-xl card-body">
+        <div class="card-body">
+          <h2 class="card-title" style="font-size:28px">
+            Create a new Project
+          </h2>
+          <form class="form-control w-full max-w-xs new-project-form">
+            <label class="label" for="new-project-name">
+              <span class="label-text">
+                Project Name
+              </span>
+            </label>
+            <input  id="new-project-name" type="text" placeholder="Name of your project" class="input input-bordered text-primary-content input-primary w-full max-w-xs" />
+            <label class="label" for="new-project-description">
+              <span class="label-text">
+                Description
+              </span>
+            </label>
+            <textarea id="new-project-description" height="50px" class="textarea text-primary-content textarea-primary" placeholder="Short description of your project"></textarea>
+      
+            <div class="card-actions justify-center">
+              <button class="btn btn-primary btn-active hover:bg-primary mt-4" type="submit">Create Project</button><br>
+            </div>
+          </form>  
+        </div>
       </div>
     </div>
+
   </div>
 
 </div>
