add instructions to code snippet page and update formatting and media queries as necessary

--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -250,4 +250,8 @@
     .signin-button {
         width: 100%;
     }
+    .code-title {
+        max-width: 150px;
+        overflow: scroll;
+    }
 }
