--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
 
   <div class="instructions-container">
     <h2 class="instructions-header">
-      Welcome to your profile page!
+      Welcome to your Profile page!
     </h2>
     <p class="instructions-paragraph">
       Here is where you can register a new project you are working on by entering the name and a short description in the form below. All your projects are stored in the "Current Projects" list. Clicking on a project in this list will take you to the timer widget where you can log the hours you spend working, automatically calculate the rate you earned, and even set intervals to be prompted with exercise suggestions periodically throughout your day.(Also, a chart.js cart is included below, but does not represent data you have stored in the database. It is currently hard-coded and will be included in a future update)
