--- a/views/codeSnippet.handlebars
+++ b/views/codeSnippet.handlebars
@@ -26,15 +26,15 @@
           <input type="checkbox" id="my-modal-5" class="modal-toggle" />
           <div class="modal">
             <div class="modal-box w-11/12 max-w-5xl">
-              <h2>
+              <h2 class="modal-label">
                 Enter Title
               </h2>
               <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs code-title" />
-              <h2>
+              <h2 class="modal-label">
                 Enter Brief Description
               </h2>
               <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs code-description" />
-              <h2>
+              <h2 class="modal-label">
                 Enter Code Snippet
               </h2>
               <textarea class="textarea textarea-primary w-full code-content" placeholder="Type your code here.."></textarea>   
