add cancel button to close code snippet modal without saving new snippet

--- a/views/codeSnippet.handlebars
+++ b/views/codeSnippet.handlebars
@@ -43,6 +43,9 @@
                 <button for="my-modal-5" id="add-code-btn" class="btn btn-primary btn-active hover:bg-primary" type="button">
                   Add Code
                 </button>
+                <button for="my-modal-5" id="cancel-code-btn" class="btn btn-primary btn-active hover:bg-primary" type="button">
+                  Cancel
+                </button>
               </div>
             </div>
           </div>
