--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,3 +274,50 @@
 .modal-action {
     justify-content: center;
 }
+
+/* -- */
+/* -- */
+/* Project Page */
+/* -- */
+/* -- */
+.project-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;   
+}
+.timer-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 0 0;
+}
+.timer-card-wrap {
+    width: 500px;
+    padding: 20px;
+    background-color: #242933;
+    border-radius: 20px;
+    margin: 10px 0;
+}
+.timer-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #2a303c;
+    border-radius: 20px;
+}
+#timer {
+    font-size: 50px;
+}
+#denomination {
+    font-size: 2.5rem;
+}
+#earned-wage {
+    font-size: 2.5rem;
+}
+#break-input {
+    width: 300px;
+}
+#rate-input {
+    width: 300px;
+}
