--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -14,61 +14,65 @@
 </div>
 
 {{!-- begin timer card --}}
-<div class="flex flex-row w-full lg:flex-row">
+<div class="project-wrap">
+
+  <div class="instructions-container">
+    <h2 class="instructions-header">
+      Welcome to your Project Page!
+    </h2>
+    <p class="instructions-paragraph">
+      This page comes equipped with a timer that acts as a multi-tool. Begin by entering the amount of time (in minutes) that you would like to work before taking an exercise break. Then, enter the hourly rate that you charge (or would charge) your clients and then hit the "start timer" button. The timer will begin, and when the specified time has elapsed, a pop-up will appear with a few suggested exercises for you to get your blood pumping. When you are ready to get back to work, exit the modal and hit the "start time" button again and repeat the process. Your time logged and wage earned will update on this page whenever the timer elapses, but be sure to hit the "save time and wage" button when you are done working to update these values in our database.
+    </p>
+  </div>
   
-  <div class="grid flex-grow card bg-base-300 rounded-box place-items-center" style="padding: 40px;">
-    
-    <div class="card w-96 bg-base-100 shadow-xl project-list flex justify-center" style="width: 500px;">
-      <h2 class="card-title" style="margin-top: 10px; align-self: center">Timer</h2>
-      <div id="timer" style="align-self: center;font-family: 'Orbitron', sans-serif;font-size: 50px;color:#00FF1A
-;margin:">
-        00:00:00
-      </div>
-      <div class="form-control" style="align-self: center;margin: 5px;">
-        <div style="width: 250px">
+  <div class="timer-container">
+    <div class="timer-card-wrap">
+      <div class="timer-card">
+        <h2 class="card-title" style="margin-top: 10px; align-self: center">Timer</h2>
+        <div id="timer" style="align-self: center;font-family: 'Orbitron', sans-serif;color:#00FF1A
+  ;margin:">
+          00:00:00
+        </div>
+        <div class="form-control" style="align-self: center;margin: 5px;">
           <input type="text" placeholder="How often will you break?" class="input input-bordered input-primary w-full max-w-xs" id="break-input" styles="margin: 5px;"/>
         </div>
-      </div>
-      <div class="form-control" style="align-self: center;margin: 10px;">
-        <div style="width: 250px">
+        <div class="form-control" style="align-self: center;margin: 10px;">
           <input type="text" placeholder="Enter your hourly rate" class="input input-bordered input-primary w-full max-w-xs" id="rate-input" styles="margin: 10px;"/>
         </div>
-      </div>
-      <div class="flex justify-center" style="">
-        <button class="btn btn-square" onclick="startTimer()" style="width: 120px; margin-bottom: 10px;">Start Timer</button>
-      </div>
+        <div class="flex justify-center" style="">
+          <button class="btn btn-square" onclick="startTimer()" style="width: 120px; margin-bottom: 10px;">Start Timer</button>
+        </div>
 
-      <div class="stats bg-primary text-primary-content" style="margin: 10px;">
-        <div class="stat">
-          <div class="stat-title">
-            Time Logged
-          </div>
-          <div class="stat-value">
-            <div id="total-time" style="margin-top: 5px;">
-              <p id="hour-total">{{this.hr}}</p>
-              <p>:</p>
-              <p id="minute-total">{{this.min}}</p>
-              <p>:</p>
-              <p id="second-total">{{this.sec}}</p>
+        <div class="stats bg-primary text-primary-content" style="margin: 10px;">
+          <div class="stat">
+            <div class="stat-title">
+              Time Logged
+            </div>
+            <div class="stat-value">
+              <div id="total-time" style="margin-top: 5px;">
+                <p id="hour-total">{{this.hr}}</p>
+                <p>:</p>
+                <p id="minute-total">{{this.min}}</p>
+                <p>:</p>
+                <p id="second-total">{{this.sec}}</p>
+              </div>
+            </div>
+            <div class="stat-actions">
+              <button class="btn btn-sm btn-success" id="save-time">Save Time and Wage</button>
             </div>
           </div>
-          <div class="stat-actions">
-            <button class="btn btn-sm btn-success" id="save-time">Save Time and Wage</button>
-          </div>
-        </div>
-      
-        <div class="stat">
-          <div class="stat-title">Current Charge</div>
-            <div class="flex" style="flex-direction: row;">
-              <p style="font-size: 2.5rem;">$</p>
-              <p id="earned-wage" style="font-size: 2.5rem">{{this.wage}}</p>
+        
+          <div class="stat">
+            <div class="stat-title">Current Charge</div>
+              <div class="flex" style="flex-direction: row;">
+                <p id="denomination">$</p>
+                <p id="earned-wage">{{this.wage}}</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    {{!-- end timer card --}}
+      {{!-- end timer card --}}
     </div>
-
   </div>
 
 </div>
