--- a/views/codeSnippet.handlebars
+++ b/views/codeSnippet.handlebars
@@ -1,5 +1,6 @@
 <div class="code-wrap">
 
+  {{!-- Page Instructions --}}
   <div class="instructions-container">
     <h2 class="instructions-header">
       Welcome to your Code Snippet page!
@@ -17,7 +18,8 @@
         <h2 class="card-title">
           Code Snippets!
         </h2>
-        <!-- The button to open modal -->
+
+        {{!-- Button to open "Create New Snippet Modal" --}}
         <label for="my-modal-5" class="btn modal-button new-code-button">
           Create New Code
         </label>
