--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,6 @@
 <div class="profile-wrap">
 
+  {{!-- Page Instructions --}}
   <div class="instructions-container">
     <h2 class="instructions-header">
       Welcome to your Profile page!
