fix bugs in code snippet page to render selected code

--- a/views/codeSnippet.handlebars
+++ b/views/codeSnippet.handlebars
@@ -54,7 +54,7 @@
         </form>
 
         {{#if codes.length}}
-        <div class="overflow-x-auto code-list">
+        <div class="overflow-x-auto">
           <table class="table w-full">
             <!-- head -->
             <thead>
