--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -8,9 +8,8 @@
     }
 }
 @media screen and (max-width: 1070px) {
-    .about-header {
-        height: 160px;
-        margin: 32px 16px 32px 16px;
+    .about-paragraph {
+        width: 90%;
     }
 }
 
@@ -24,6 +23,45 @@
     }
     #modal-card {
         padding: 0;
+    }
+    .about-wrap {
+        flex-direction: column;
+    }
+    .about-header {
+        border: none;
+        max-height: 40px;
+        text-align: center;
+        border-bottom: 2px solid;
+    }
+    #about-owner-paragraph {
+        width: 200px;
+        height: 30px;
+        margin: 0;
+        text-align: center;
+        padding: 5px 0 0 0;
+    }
+    #about-owner-header {
+        margin: 20px 0 0 0;
+        padding: 0;
+    }
+    #about-site-header {
+        margin: 20px 0 0 0;
+        padding: 0;
+    }
+    #about-site-paragraph {
+        margin: 10px 0 0 0;
+    }
+    #about-technologies-header {
+        margin: 20px 0 0 0;
+        padding: 0;
+    }
+    .technologies-wrap {
+        align-items: center;
+        margin: 10px 0 20px 0;
+    }
+    #about-technologies-paragraph {
+        width: 800px;
+        text-align: center;
     }
 }
 
@@ -54,11 +92,11 @@
 }
 
 @media screen and (max-width: 845px) {
-    .about-header {
-        height: 200px;
+    #about-site-paragraph {
+        width: 90%;
     }
-    .about-paragraph {
-        padding: 35px 40px 0 20px;
+    #about-technologies-paragraph {
+        width: 90%;
     }
 }
 
@@ -118,6 +156,12 @@
     .card-image {
         border-radius: 0;
     }
+    #about-site-paragraph {
+        padding: 0;
+    }
+    #about-technologies-paragraph {
+        padding: 0;
+    }
 }
 
 @media screen and (max-width: 595px) {
@@ -133,13 +177,6 @@
 }
 
 @media screen and (max-width: 530px) {
-    .about-header {
-        height: 360px;
-        margin: 32px 8px 32px 8px;
-    }
-    .about-paragraph {
-        padding: 30px 40px 0 10px;
-    }
     .project-summary {
         display: none;
     }
@@ -155,16 +192,6 @@
     .about-wrap {
         display: flex;
         flex-direction: column;
-    }
-    .about-header {
-        height: 80px;
-        width: 90%;
-        margin: 0 auto;
-        border-bottom: 3px solid;
-        border-right: none;
-    }
-    .about-paragraph {
-        padding: 20px 40px 20px 40px;
     }
     #gitLogo {
         margin: 0 0 0 10px;
