--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -74,13 +74,39 @@
   </div>
 
   <!-- about the webpage sections -->
-  <div class="about-wrap">
-    <h3 class="about-header">
-      About Us
-    </h3>
-    <p class="about-paragraph">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantiumconsequuntur.
-    </p>
+  <div class="about-container">
+    <div class="about-wrap">
+      <h3 class="about-header" id="about-owner-header">
+        Fork Owner
+      </h3>
+      <p class="about-paragraph" id="about-owner-paragraph">
+        Jake Walsh
+      </p>
+    </div>
+    <div class="about-wrap">
+      <h3 class="about-header" id="about-site-header">
+        About Our Site
+      </h3>
+      <p class="about-paragraph" id="about-site-paragraph">
+        This project was a collaboration between myself and two of my peers. The purpose was to hone our development skills by building and deploying a full-stack web application from scratch. We wanted to structure the app in an MVC architecture, so that it was functional, interactive, and able to store a users data between sessions. The final product showcases an ability to program useful front-end functionality, an attractive and userfriendly UX/UI, and an efficient back-end equipped with models, routes, controllers, and a database. Discover more of my work by following the links to my socials in the footer.
+      </p>
+    </div>
+    <div class="about-wrap">
+      <h3 class="about-header"  id="about-technologies-header">
+        Technologies Used
+      </h3>
+      <div class="technologies-wrap ">
+        <p class="about-paragraph" id="about-technologies-paragraph">
+          Development: NodeJS, dotenv, GitHub
+        </p>
+        <p class="about-paragraph" id="about-technologies-paragraph">
+          Front-End: JavaScript, CSS3, Tailwind, Google Fonts, AnimeJS,
+        </p>
+        <p class="about-paragraph" id="about-technologies-paragraph">
+          Back-End: MySQL, Handlebars, Sequelize, Express, Express Session, Connect Session Sequelize, Bcrypt
+        </p>
+      </div>
+    </div>
   </div>
   
   <script src="https://cdn.tailwindcss.com"></script>
